--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Tienda de Autos Usados</title>
-    <link rel="stylesheet" href="./styles/styles.css"> </head>
+    <link rel="stylesheet" href="./styles/styles.css">
+</head>
 <body>
 
     <header>
@@ -26,7 +27,8 @@
                 </div>
                 <div class="filter-group">
                     <label for="filter-year">Año:</label>
-                    <input type="number" id="filter-year" name="year" min="1900" max="2025"> </div>
+                    <input type="number" id="filter-year" name="year" min="1900" max="2025">
+                </div>
                 <div class="filter-group price-range">
                     <label>Rango de Precio:</label>
                     <input type="number" id="filter-priceMin" name="priceMin" placeholder="Mínimo">
@@ -50,6 +52,10 @@
             <div id="cars-container">
                 <p id="loading-message">Cargando vehículos...</p>
             </div>
+            <!--
+              Las tarjetas de vehículos, junto con los botones "Comprar", "Agendar Visita" y
+              "Solicitar Crédito", son generadas dinámicamente desde el script.js
+            -->
         </section>
     </main>
 
@@ -57,5 +63,6 @@
         <p>&copy; 2025 Tu Tienda de Autos Usados</p>
     </footer>
 
-    <script src="./src/scripts/script.js"></script> </body>
+    <script src="./src/scripts/script.js"></script>
+</body>
 </html>
